--- a/Contents/mods/BardToTheBone/common/ChangeLog.txt
+++ b/Contents/mods/BardToTheBone/common/ChangeLog.txt
@@ -4,6 +4,7 @@ link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfil
 link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
 [ ------ ]
 
-[ 4/23/25 ]
-- Innit
+[ 5/25 ]
+Welcome to BARD TO THE BONE!
+Zomboid's ABC notation music system!
 [ ------ ]
