--- a/Contents/mods/BardToTheBone/common/ChangeLog.txt
+++ b/Contents/mods/BardToTheBone/common/ChangeLog.txt
@@ -1,7 +1,7 @@
 [ ALERT_CONFIG ]
 link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/chuckleberryfinn,
 link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
-link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
+link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn/Bard-To-The-Bone,
 [ ------ ]
 
 [ 5/25 ]
