--- a/Contents/mods/BardToTheBone/common/ChangeLog.txt
+++ b/Contents/mods/BardToTheBone/common/ChangeLog.txt
@@ -17,3 +17,7 @@ Added Xylophones to the distribution.
 [ 5/21/25 ]
 - B41: back-compat for electric bass and guitars.
 [ ------ ]
+
+[ 5/21/25 - 2 ]
+Improved UI scaling with different resolutions.
+[ ------ ]
