--- a/Contents/mods/BardToTheBone/media/ChangeLog.txt
+++ b/Contents/mods/BardToTheBone/media/ChangeLog.txt
@@ -12,3 +12,7 @@ Zomboid's ABC notation music system!
 [ 5/21/25 ]
 - B41 back compat for electric bass and guitars.
 [ ------ ]
+
+[ 5/21/25 - 2 ]
+Improved UI scaling with different resolutions.
+[ ------ ]
