--- a/Contents/mods/BardToTheBone/media/ChangeLog.txt
+++ b/Contents/mods/BardToTheBone/media/ChangeLog.txt
@@ -25,3 +25,7 @@ Improved UI scaling with different resolutions.
 [ 5/23/25 ]
 - Added volume control.
 [ ------ ]
+
+[ 5/24/25 ]
+- Regenerated sounds with a relative volume closer to vanilla sounds.
+[ ------ ]
